# serializer version: 1
# name: test_docs_pages_include_cortex_complete_command_docs
  '''
  ---
  title: snow cortex complete
  description: ''
  ---
  
  import Help from 'INCLUDE/snowcli/parameter-descriptions/help.mdx'
  
  # snow cortex complete
  
  <RelatedTopics>
  - [](/developer-guide/snowflake-cli/index)
  - [Snowflake CLI command reference](/developer-guide/snowflake-cli/command-reference/overview)
  - [](/developer-guide/snowflake-cli/command-reference/cortex-commands/overview)
  - [Snowflake Cortex](/user-guide/snowflake-cortex/aisql)
  </RelatedTopics>
  
  Given a prompt, the command generates a response using your choice of language model. In the simplest use case, the prompt is a single string. You may also provide a JSON file with conversation history including multiple prompts and responses for interactive chat-style usage.
  
  ## Syntax
  
  ```console
  snow cortex complete
    <text>
    --model <model>
    --backend <backend>
    --file <file>
    --connection <connection>
    --host <host>
    --port <port>
    --protocol <protocol>
    --account <account>
    --user <user>
    --password <password>
    --authenticator <authenticator>
    --workload-identity-provider <workload_identity_provider>
    --private-key-file <private_key_file>
    --token <token>
    --token-file-path <token_file_path>
    --database <database>
    --schema <schema>
    --role <role>
    --warehouse <warehouse>
    --temporary-connection
    --mfa-passcode <mfa_passcode>
    --enable-diag
    --diag-log-path <diag_log_path>
    --diag-allowlist-path <diag_allowlist_path>
    --oauth-client-id <oauth_client_id>
    --oauth-client-secret <oauth_client_secret>
    --oauth-authorization-url <oauth_authorization_url>
    --oauth-token-request-url <oauth_token_request_url>
    --oauth-redirect-uri <oauth_redirect_uri>
    --oauth-scope <oauth_scope>
    --oauth-disable-pkce
    --oauth-enable-refresh-tokens
    --oauth-enable-single-use-refresh-tokens
    --client-store-temporary-credential
    --secondary-roles <secondary_roles>
    --server-session-keep-alive
    --format <format>
    --verbose
    --debug
    --silent
    --enhanced-exit-codes
    --decimal-precision <decimal_precision>
  ```
  
  ## Arguments
  
  <dl>
  <dt><code className="samp"><em>text</em></code></dt>
  <dd>
  
  *Optional*
  
  Prompt to be used to generate a completion. Cannot be combined with --file option.
  
  </dd>
  </dl>
  
  ## Options
  
  <dl>
  <dt><code className="samp">--model <em>TEXT</em></code></dt>
  <dd>
  
  String specifying the model to be used. Default: llama3.1-70b.
  
  </dd>
  <dt>`--backend [sql|rest]`</dt>
  <dd>
  
  String specifying whether to use sql or rest backend. Default: rest.
  
  </dd>
  <dt><code className="samp">--file <em>FILE</em></code></dt>
  <dd>
  
  JSON file containing conversation history to be used to generate a completion. Cannot be combined with TEXT argument.
  
  </dd>
  <dt><code className="samp">--connection, -c, --environment <em>TEXT</em></code></dt>
  <dd>
  
  Name of the connection, as defined in your `config.toml` file. Default: `default`.
  
  </dd>
  <dt><code className="samp">--host <em>TEXT</em></code></dt>
  <dd>
  
  Host address for the connection. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--port <em>INTEGER</em></code></dt>
  <dd>
  
  Port for the connection. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--protocol <em>TEXT</em></code></dt>
  <dd>
  
  Protocol to use for the connection, for example `https`. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--account, --accountname <em>TEXT</em></code></dt>
  <dd>
  
  Name assigned to your Snowflake account. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--user, --username <em>TEXT</em></code></dt>
  <dd>
  
  Username to connect to Snowflake. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--password <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake password. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--authenticator <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake authenticator. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--workload-identity-provider <em>TEXT</em></code></dt>
  <dd>
  
  Workload identity provider (AWS, AZURE, GCP, OIDC). Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--private-key-file, --private-key-path <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake private key file path. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--token <em>TEXT</em></code></dt>
  <dd>
  
  OAuth token to use when connecting to Snowflake.
  
  </dd>
  <dt><code className="samp">--token-file-path <em>TEXT</em></code></dt>
  <dd>
  
  Path to file with an OAuth token to use when connecting to Snowflake.
  
  </dd>
  <dt><code className="samp">--database, --dbname <em>TEXT</em></code></dt>
  <dd>
  
  Database to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--schema, --schemaname <em>TEXT</em></code></dt>
  <dd>
  
  Database schema to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--role, --rolename <em>TEXT</em></code></dt>
  <dd>
  
  Role to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--warehouse <em>TEXT</em></code></dt>
  <dd>
  
  Warehouse to use. Overrides the value specified for the connection.
  
  </dd>
  <dt>`--temporary-connection, -x`</dt>
  <dd>
  
  Uses a connection defined with command-line parameters, instead of one defined in config. Default: False.
  
  </dd>
  <dt><code className="samp">--mfa-passcode <em>TEXT</em></code></dt>
  <dd>
  
  Token to use for multi-factor authentication (MFA).
  
  </dd>
  <dt>`--enable-diag`</dt>
  <dd>
  
  Whether to generate a connection diagnostic report. Default: False.
  
  </dd>
  <dt><code className="samp">--diag-log-path <em>TEXT</em></code></dt>
  <dd>
  
  Path for the generated report. Defaults to system temporary directory. Default: &lt;system_temporary_directory&gt;.
  
  </dd>
  <dt><code className="samp">--diag-allowlist-path <em>TEXT</em></code></dt>
  <dd>
  
  Path to a JSON file that contains allowlist parameters.
  
  </dd>
  <dt><code className="samp">--oauth-client-id <em>TEXT</em></code></dt>
  <dd>
  
  Value of client id provided by the Identity Provider for Snowflake integration.
  
  </dd>
  <dt><code className="samp">--oauth-client-secret <em>TEXT</em></code></dt>
  <dd>
  
  Value of the client secret provided by the Identity Provider for Snowflake integration.
  
  </dd>
  <dt><code className="samp">--oauth-authorization-url <em>TEXT</em></code></dt>
  <dd>
  
  Identity Provider endpoint supplying the authorization code to the driver.
  
  </dd>
  <dt><code className="samp">--oauth-token-request-url <em>TEXT</em></code></dt>
  <dd>
  
  Identity Provider endpoint supplying the access tokens to the driver.
  
  </dd>
  <dt><code className="samp">--oauth-redirect-uri <em>TEXT</em></code></dt>
  <dd>
  
  URI to use for authorization code redirection.
  
  </dd>
  <dt><code className="samp">--oauth-scope <em>TEXT</em></code></dt>
  <dd>
  
  Scope requested in the Identity Provider authorization request.
  
  </dd>
  <dt>`--oauth-disable-pkce`</dt>
  <dd>
  
  Disables Proof Key for Code Exchange (PKCE). Default: `False`.
  
  </dd>
  <dt>`--oauth-enable-refresh-tokens`</dt>
  <dd>
  
  Enables a silent re-authentication when the actual access token becomes outdated. Default: `False`.
  
  </dd>
  <dt>`--oauth-enable-single-use-refresh-tokens`</dt>
  <dd>
  
  Whether to opt-in to single-use refresh token semantics. Default: `False`.
  
  </dd>
  <dt>`--client-store-temporary-credential`</dt>
  <dd>
  
  Store the temporary credential.
  
  </dd>
  <dt><code className="samp">--secondary-roles <em>TEXT</em></code></dt>
  <dd>
  
  Secondary roles mode applied when the session starts. Supported values are `ALL` and `NONE`; pass `NONE` to run the session only with the primary role.
  
  </dd>
  <dt>`--server-session-keep-alive`</dt>
  <dd>
  
  Keep the session active indefinitely, even if there is no activity from the user.
  
  </dd>
  <dt>`--format [TABLE|JSON|JSON_EXT|CSV]`</dt>
  <dd>
  
  Specifies the output format. Default: TABLE.
  
  </dd>
  <dt>`--verbose, -v`</dt>
  <dd>
  
  Displays log entries for log levels `info` and higher. Default: False.
  
  </dd>
  <dt>`--debug`</dt>
  <dd>
  
  Displays log entries for log levels `debug` and higher; debug logs contain additional information. Default: False.
  
  </dd>
  <dt>`--silent`</dt>
  <dd>
  
  Turns off intermediate output to console. Default: False.
  
  </dd>
  <dt>`--enhanced-exit-codes`</dt>
  <dd>
  
  Differentiate exit error codes based on failure type. Default: False.
  
  </dd>
  <dt><code className="samp">--decimal-precision <em>INTEGER</em></code></dt>
  <dd>
  
  Number of decimal places to display for decimal values. Uses Python's default precision if not specified. [env var: SNOWFLAKE_DECIMAL_PRECISION].
  
  </dd>
  </dl>
  
  <Help />
  
  ## Usage notes
  
  In the simplest use case, the prompt is a single string.
  You can also provide a JSON file with conversation history, including multiple prompts and responses,
  for interactive chat-style conversation.
  
  ## Examples
  
  - Ask a question using the default model.
    ```snowcli
    snow cortex complete "Is 5 more than 4? Please answer using one word without a period." -c snowhouse
    ```
  
    ```text
    Yes
    ```
  
  - Ask a question using a specified model.
    ```snowcli
    snow cortex complete "Is 5 more than 4? Please answer using one word without a period." -c snowhouse --model deepseek-r1
    ```
  
    ```text
    Yes
    ```
  
  '''
# ---
# name: test_flags_have_default_values
  '''
  Given a prompt, the command generates a response using your choice of language model. In the simplest use case, the prompt is a single string. You may also provide a JSON file with conversation history including multiple prompts and responses for interactive chat-style usage.
  
  ## Syntax
  
  ```console
  snow cortex complete
    <text>
    --model <model>
    --backend <backend>
    --file <file>
    --connection <connection>
    --host <host>
    --port <port>
    --protocol <protocol>
    --account <account>
    --user <user>
    --password <password>
    --authenticator <authenticator>
    --workload-identity-provider <workload_identity_provider>
    --private-key-file <private_key_file>
    --token <token>
    --token-file-path <token_file_path>
    --database <database>
    --schema <schema>
    --role <role>
    --warehouse <warehouse>
    --temporary-connection
    --mfa-passcode <mfa_passcode>
    --enable-diag
    --diag-log-path <diag_log_path>
    --diag-allowlist-path <diag_allowlist_path>
    --oauth-client-id <oauth_client_id>
    --oauth-client-secret <oauth_client_secret>
    --oauth-authorization-url <oauth_authorization_url>
    --oauth-token-request-url <oauth_token_request_url>
    --oauth-redirect-uri <oauth_redirect_uri>
    --oauth-scope <oauth_scope>
    --oauth-disable-pkce
    --oauth-enable-refresh-tokens
    --oauth-enable-single-use-refresh-tokens
    --client-store-temporary-credential
    --secondary-roles <secondary_roles>
    --server-session-keep-alive
    --format <format>
    --verbose
    --debug
    --silent
    --enhanced-exit-codes
    --decimal-precision <decimal_precision>
  ```
  
  ## Arguments
  
  <dl>
  <dt><code className="samp"><em>text</em></code></dt>
  <dd>
  
  *Optional*
  
  Prompt to be used to generate a completion. Cannot be combined with --file option.
  
  </dd>
  </dl>
  
  
  ## Options
  
  <dl>
  <dt><code className="samp">--model <em>TEXT</em></code></dt>
  <dd>
  
  String specifying the model to be used. Default: llama3.1-70b.
  
  </dd>
  <dt>`--backend [sql|rest]`</dt>
  <dd>
  
  String specifying whether to use sql or rest backend. Default: rest.
  
  </dd>
  <dt><code className="samp">--file <em>FILE</em></code></dt>
  <dd>
  
  JSON file containing conversation history to be used to generate a completion. Cannot be combined with TEXT argument.
  
  </dd>
  <dt><code className="samp">--connection, -c, --environment <em>TEXT</em></code></dt>
  <dd>
  
  Name of the connection, as defined in your `config.toml` file. Default: `default`.
  
  </dd>
  <dt><code className="samp">--host <em>TEXT</em></code></dt>
  <dd>
  
  Host address for the connection. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--port <em>INTEGER</em></code></dt>
  <dd>
  
  Port for the connection. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--protocol <em>TEXT</em></code></dt>
  <dd>
  
  Protocol to use for the connection, for example `https`. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--account, --accountname <em>TEXT</em></code></dt>
  <dd>
  
  Name assigned to your Snowflake account. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--user, --username <em>TEXT</em></code></dt>
  <dd>
  
  Username to connect to Snowflake. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--password <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake password. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--authenticator <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake authenticator. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--workload-identity-provider <em>TEXT</em></code></dt>
  <dd>
  
  Workload identity provider (AWS, AZURE, GCP, OIDC). Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--private-key-file, --private-key-path <em>TEXT</em></code></dt>
  <dd>
  
  Snowflake private key file path. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--token <em>TEXT</em></code></dt>
  <dd>
  
  OAuth token to use when connecting to Snowflake.
  
  </dd>
  <dt><code className="samp">--token-file-path <em>TEXT</em></code></dt>
  <dd>
  
  Path to file with an OAuth token to use when connecting to Snowflake.
  
  </dd>
  <dt><code className="samp">--database, --dbname <em>TEXT</em></code></dt>
  <dd>
  
  Database to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--schema, --schemaname <em>TEXT</em></code></dt>
  <dd>
  
  Database schema to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--role, --rolename <em>TEXT</em></code></dt>
  <dd>
  
  Role to use. Overrides the value specified for the connection.
  
  </dd>
  <dt><code className="samp">--warehouse <em>TEXT</em></code></dt>
  <dd>
  
  Warehouse to use. Overrides the value specified for the connection.
  
  </dd>
  <dt>`--temporary-connection, -x`</dt>
  <dd>
  
  Uses a connection defined with command-line parameters, instead of one defined in config. Default: False.
  
  </dd>
  <dt><code className="samp">--mfa-passcode <em>TEXT</em></code></dt>
  <dd>
  
  Token to use for multi-factor authentication (MFA).
  
  </dd>
  <dt>`--enable-diag`</dt>
  <dd>
  
  Whether to generate a connection diagnostic report. Default: False.
  
  </dd>
  <dt><code className="samp">--diag-log-path <em>TEXT</em></code></dt>
  <dd>
  
  Path for the generated report. Defaults to system temporary directory. Default: &lt;system_temporary_directory&gt;.
  
  </dd>
  <dt><code className="samp">--diag-allowlist-path <em>TEXT</em></code></dt>
  <dd>
  
  Path to a JSON file that contains allowlist parameters.
  
  </dd>
  <dt><code className="samp">--oauth-client-id <em>TEXT</em></code></dt>
  <dd>
  
  Value of client id provided by the Identity Provider for Snowflake integration.
  
  </dd>
  <dt><code className="samp">--oauth-client-secret <em>TEXT</em></code></dt>
  <dd>
  
  Value of the client secret provided by the Identity Provider for Snowflake integration.
  
  </dd>
  <dt><code className="samp">--oauth-authorization-url <em>TEXT</em></code></dt>
  <dd>
  
  Identity Provider endpoint supplying the authorization code to the driver.
  
  </dd>
  <dt><code className="samp">--oauth-token-request-url <em>TEXT</em></code></dt>
  <dd>
  
  Identity Provider endpoint supplying the access tokens to the driver.
  
  </dd>
  <dt><code className="samp">--oauth-redirect-uri <em>TEXT</em></code></dt>
  <dd>
  
  URI to use for authorization code redirection.
  
  </dd>
  <dt><code className="samp">--oauth-scope <em>TEXT</em></code></dt>
  <dd>
  
  Scope requested in the Identity Provider authorization request.
  
  </dd>
  <dt>`--oauth-disable-pkce`</dt>
  <dd>
  
  Disables Proof Key for Code Exchange (PKCE). Default: `False`.
  
  </dd>
  <dt>`--oauth-enable-refresh-tokens`</dt>
  <dd>
  
  Enables a silent re-authentication when the actual access token becomes outdated. Default: `False`.
  
  </dd>
  <dt>`--oauth-enable-single-use-refresh-tokens`</dt>
  <dd>
  
  Whether to opt-in to single-use refresh token semantics. Default: `False`.
  
  </dd>
  <dt>`--client-store-temporary-credential`</dt>
  <dd>
  
  Store the temporary credential.
  
  </dd>
  <dt><code className="samp">--secondary-roles <em>TEXT</em></code></dt>
  <dd>
  
  Secondary roles mode applied when the session starts. Supported values are `ALL` and `NONE`; pass `NONE` to run the session only with the primary role.
  
  </dd>
  <dt>`--server-session-keep-alive`</dt>
  <dd>
  
  Keep the session active indefinitely, even if there is no activity from the user.
  
  </dd>
  <dt>`--format [TABLE|JSON|JSON_EXT|CSV]`</dt>
  <dd>
  
  Specifies the output format. Default: TABLE.
  
  </dd>
  <dt>`--verbose, -v`</dt>
  <dd>
  
  Displays log entries for log levels `info` and higher. Default: False.
  
  </dd>
  <dt>`--debug`</dt>
  <dd>
  
  Displays log entries for log levels `debug` and higher; debug logs contain additional information. Default: False.
  
  </dd>
  <dt>`--silent`</dt>
  <dd>
  
  Turns off intermediate output to console. Default: False.
  
  </dd>
  <dt>`--enhanced-exit-codes`</dt>
  <dd>
  
  Differentiate exit error codes based on failure type. Default: False.
  
  </dd>
  <dt><code className="samp">--decimal-precision <em>INTEGER</em></code></dt>
  <dd>
  
  Number of decimal places to display for decimal values. Uses Python's default precision if not specified. [env var: SNOWFLAKE_DECIMAL_PRECISION].
  
  </dd>
  </dl>
  
  '''
# ---
# name: test_render_command_page_with_structured_docs
  '''
  ---
  title: snow plugin demo
  description: ''
  ---
  
  import Help from 'INCLUDE/snowcli/parameter-descriptions/help.mdx'
  
  # snow plugin demo
  
  <RelatedTopics>
  - [](/developer-guide/snowflake-cli/data-pipelines/dcm-projects)
  - [DCM &lt;projects&gt; overview](/user-guide/dcm-projects/dcm-projects-overview)
  </RelatedTopics>
  
  Executes the demo object.
  
  ## Syntax
  
  ```console
  snow plugin demo
    <object_name>
    --force
  ```
  
  ## Arguments
  
  <dl>
  <dt><code className="samp"><em>object_name</em></code></dt>
  <dd>
  
  *Required*
  
  Name of the object.
  
  </dd>
  </dl>
  
  ## Options
  
  <dl>
  <dt>`--force`</dt>
  <dd>
  
  Skip the confirmation prompt. Default: False.
  
  </dd>
  </dl>
  
  <Help />
  
  ## Usage notes
  
  Use `--force` to skip the prompt.
  
  The &lt;object_name&gt; object must already exist.
  
  ## Examples
  
  - The following example executes the &lt;object_name&gt; object:
    ```snowcli
    snow plugin demo MY_OBJECT
    ```
  
    ```text
    Object <MY_OBJECT> executed.
    ```
  
  - ```snowcli
    snow plugin demo OTHER --force
    ```
  
  '''
# ---
